# pdaqp-solver-cpp

./: .clang-format  .gitignore  LICENSE  README.md  demo.cpp  main.cpp  meson.build  meson.options  pdaqp-solver.cpp  pdaqp-solver.h
apply_feedback/: README.md  meson.build
apply_feedback/inc/: apply_feedback.h
apply_feedback/src/: apply_feedback.cpp
common/: meson.build
common/inc/: fixed_math.hpp  fixed_queue.hpp  log2ceil.hpp  types.hpp  vector-math.hpp
examples/mpc_re/: constants.hpp  problem-def.hpp
examples/pid/: constants.hpp  problem-def.hpp
subprojects/: armadillo-code.wrap  boost-sml.wrap
subprojects/packagefiles/armadillo-code/: meson.build  meson.options
subprojects/packagefiles/boost-sml/: meson.build
tree_walker/: README.md  meson.build
tree_walker/inc/: tree_walker.h
tree_walker/src/: hyperplane_math.hpp  tree_walker_heap.cpp  tree_walker_lut.cpp  tree_walker_sml.cpp
